Added .xml log4j configuration file and code refactored.